syntax = "proto3";
package api_def;
option go_package = "/api_def";
import "kk_etcd_models/pb_server_kk_etcd.proto";

//deregister server
message DeregisterServer {
  message Input {
    kk_etcd_models.PBServer Server = 1;
  }

  message Output {
  }
}