syntax = "proto3";
package kk_etcd_models;
option go_package = "./;kk_etcd_models";
import "pb_server.proto";
// protoc -I=. --go_out=./ *.proto


// protoc -I=. --dart_out=../../lib/kk_etcd_models *.proto google/protobuf/timestamp.proto


message ServerListParam {
  string  Prefix = 1;
}
message ServerListResponse {
  PBListServer ServerList = 1;
}